@startuml

title __ACTIVITY's Class Diagram__\n

  namespace com.example.netnew {
    namespace activity {
      class com.example.netnew.activity.LoginActivity {
          - btnLogin : Button
          - etAccount : EditText
          - etPassword : EditText
          - tvRegister : TextView
          # onCreate()
      }
    }
  }
  

  namespace com.example.netnew {
    namespace activity {
      class com.example.netnew.activity.MainActivity {
          - fragments : Fragment[]
          - llContent : LinearLayout
          - myActivity : Activity
          - rbNews : RadioButton
          - rbUser : RadioButton
          - time : long
          - tvTitle : TextView
          + exit()
          + onKeyDown()
          # onCreate()
          # onDestroy()
          - initNetworkReceiver()
          - initView()
          - setViewListener()
          - switchFragment()
      }
    }
  }
  

  namespace com.example.netnew {
    namespace activity {
      class com.example.netnew.activity.NewsDataDetailActivity {
          - myActivity : Activity
          - url : String
          - webView : WebView
          + back()
          # onCreate()
          - initData()
      }
    }
  }
  

  namespace com.example.netnew {
    namespace activity {
      class com.example.netnew.activity.OpenActivity {
          - sf : SimpleDateFormat
          # onCreate()
      }
    }
  }
  

  namespace com.example.netnew {
    namespace activity {
      class com.example.netnew.activity.PasswordActivity {
          - activity : Activity
          - etNewPassword : EditText
          + back()
          + save()
          # onCreate()
      }
    }
  }
  

  namespace com.example.netnew {
    namespace activity {
      class com.example.netnew.activity.PersonActivity {
          - btnSave : Button
          - etAddress : EditText
          - etNickName : EditText
          - etPhone : EditText
          - mActivity : Activity
          - rgSex : RadioGroup
          - tvAccount : TextView
          + back()
          # onCreate()
          - initView()
      }
    }
  }
  

  namespace com.example.netnew {
    namespace activity {
      class com.example.netnew.activity.RegisterActivity {
          - btnRegister : Button
          - etAccount : EditText
          - etAddress : EditText
          - etNickName : EditText
          - etPassword : EditText
          - etPasswordSure : EditText
          - etPhone : EditText
          - headerRO : RequestOptions
          - imagePath : String
          - ivPhoto : ImageView
          - rgSex : RadioGroup
          - tvLogin : TextView
          + back()
          # onCreate()
          - selectClick()
      }
    }
  }
  

  namespace com.example.netnew {
    namespace activity {
      class com.example.netnew.activity.VideoActivity {
          {static} + lj : int[]
          - mVideo : VideoView
          + back()
          # onCreate()
          # onDestroy()
      }
    }
  }
  

  com.example.netnew.activity.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.netnew.activity.LoginActivity o-- com.example.netnew.util.MySqliteOpenHelper : helper
  com.example.netnew.activity.MainActivity -up-|> android.app.Activity
  com.example.netnew.activity.MainActivity o-- com.example.netnew.util.NetworkReceiver : mNetReceiver
  com.example.netnew.activity.NewsDataDetailActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.netnew.activity.OpenActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.netnew.activity.OpenActivity o-- com.example.netnew.util.MySqliteOpenHelper : helper
  com.example.netnew.activity.PasswordActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.netnew.activity.PasswordActivity o-- com.example.netnew.util.MySqliteOpenHelper : helper
  com.example.netnew.activity.PersonActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.netnew.activity.PersonActivity o-- com.example.netnew.util.MySqliteOpenHelper : helper
  com.example.netnew.activity.PersonActivity o-- com.example.netnew.bean.User : mUser
  com.example.netnew.activity.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.netnew.activity.RegisterActivity o-- com.example.netnew.util.MySqliteOpenHelper : helper
  com.example.netnew.activity.VideoActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
